footer layout bug fixed

--- a/resources/src/assets/stylesheets/style.sass
+++ b/resources/src/assets/stylesheets/style.sass
@@ -43,6 +43,7 @@ body
   background-color: #f9f7f9
   min-width: 314px
   overflow-x: hidden
+  width: 100vw
 
 #container
   width: 100%
@@ -441,6 +442,10 @@ footer
     margin: 10px
   & a
     color: white
+
+.footerContainer
+  width: 100vw
+  overflow: hidden
 
 // map
 iframe
